2011-04-12 # 0.10.0-dev

[NEW] Redesigned Operation API.

[NEW] Request.API class.

[NEW] Database queries profiling.




2011-03-10 # 0.9.0

* Modules accessor:

Just like models, modules are now got throught an accessor. The `index_modules`,
`read_module_info`, `load_module`, `get_module`, `has_module`, `run_modules` methods of the WdCore
class are now deprecated, one can check the availability of a module or get a module using the
following lines:

	$has_module = isset($core->modules['system.nodes']);
	$hasnt_module = empty($core->modules['system.nodes']);
	
	$module = $core->modules['system.nodes'];
	
As stated before, the `load_module` is now deprecated, it was moved to the modules accessor class
and is now protected. The sole purpose of it being public was to circumvent the autorun feature of
the `get_module` method. The same behaviour can now be easily achieved using the `autoload`
property of the accessor:

	$core->modules->autoload = false;
	$module = $core->modules['system.nodes'];
	
As for the `index_modules`, `read_module_info` and `run_modules` methods, they have been move to
the accessor class. The `index_modules` and `read_module_info` are now protected, but the former
`run_modules` has been made public since its now outside the scope of the WdCore class. One can run
modules with the following line:

	$core->modules->run();
	
The `descriptors` property of the Core object is now deprecated, and is available in the modules
accessor:

	$core->modules->descriptors;
	
On a side note, one should pay attention to the relationship between mixin getters and the modules
accessor, because if mixins getters are initialized before the modules accessor, the modules
configuration for the getters will never be considered.


* Variables accessor:

Values can now be stored as simple files in the "/repository/var" directory. This accessor
is a meant to simplify the process:

	$core->vars['my_variable_name'] = $value;
	$value = $core->vars['my_variable_name'];
	